# individual

./: .coveragerc  .gitignore  README.md  environment.yml  pyproject.toml  requirements-summary.txt  requirements-test.txt  requirements.txt
.github/: dependabot.yml  tests.yml
.github/workflows/: codeql.yml  defender-for-devops.yml  scorecard.yml  tests.yml
scripts/common/: common.sh
scripts/install/: install.sh  uninstall.sh
scripts/tests/: common.sh  coverage.sh
scripts/virtualenv/: create-venv.sh  delete-venv.sh
src/individual/: definitions.py  system.py
src/individual/common/: common.py
tests/: conftest.py  test_common.py  test_system.py
